# dragracedb

./: .gitignore  README.md  manage.py  pyproject.toml  schema.xml
data/: drag_race.csv
dragracedb/: asgi.py  settings.py  urls.py  wsgi.py
episodes/: admin.py  models.py  views.py
episodes/migrations/: 0001_initial.py  0002_auto_20200608_0111.py  0003_remove_episodequeen_lip_sync_result.py  0004_auto_20200608_0527.py  0005_auto_20200610_0129.py  0006_episode_queens.py
lip_syncs/: admin.py  apps.py  models.py  views.py
lip_syncs/migrations/: 0001_initial.py  0002_auto_20200608_0111.py  0003_lipsyncqueen_result.py
queens/: admin.py  models.py  views.py
queens/migrations/: 0001_initial.py  0002_auto_20200608_0111.py  0003_queen_lip_syncs.py  0004_auto_20200611_0026.py
scripts/: export.py  import.py
seasons/: admin.py  models.py  views.py
seasons/migrations/: 0001_initial.py  0002_auto_20200608_0111.py  0003_season_number.py  0004_auto_20200610_0305.py
utils/: loader.py
