[tool.poetry]
name = "dragracedb"
version = "0.1.0"
description = ""
authors = ["Brett LaBombarda <bplabombarda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
django-extensions = "^2.2.9"
django-admin-interface = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
pytest-watch = "^4.2.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
